--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,12 @@ version: '3.8'
 services:
   db:
     image: postgres:13
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U library_user -d library_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      # start_period: 30s
     environment:
       POSTGRES_DB: library_db
       POSTGRES_USER: library_user
